<resources>
    <string name="app_name">BookingApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Log">Log in</string>
    <string name="Sign">Sign up</string>
    <string name="Welcome">Welcome</string>
    <string name="DoSign">Sign</string>
    <string name="Return">Return to main</string>
    <string name="InputName">Input your account name</string>
    <string name="InputPassword">Input your password</string>
    <string name="modify">Confirm</string>
    <string name="btn_delete">Delete</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="create">Create Course</string>
    <string name="CourseName">Course Name</string>
    <string name="AccountName">Account user Name</string>
    <string name="CourseCode">Course Code</string>
    <string name="CourseManage">Course Manage:</string>
    <string name="AccountManage">Account Manage:</string>
    <string name="SignUpStudent">Sign Up As Student</string>
    <string name="SignUpInstructor">Sign Up As Instructor</string>
    <string name="NewCourseName">New Course Name</string>
    <string name="NewCourseCode">New Course Code</string>
    <string name="Edit">Edit</string>
    <string name="EditByCode">Edit By Code</string>
    <string name="EditByName">Edit By Name</string>
    <string name="searchByName">Search BY Name</string>
    <string name="searchByCode">Search By Code</string>
    <string name="CourseAssi">Course Assignment</string>
    <string name="modifyCrs">Modify Course</string>
    <string name="VerifyAssign">Check Assignment</string>
    <string name="assign">Assign</string>
    <string name="CourseManagement">Modify Course Info</string>
    <string name="addDesAndCapa">"Add"</string>
    <string name="editDesAndCapa">Save</string>
    <string name="addDesAndCapac">Add</string>
    <string name="deleteSession">"Delete session "</string>
    <string name="addSession">Add session</string>
    <string name="addSessionf">Add session</string>
    <string name="deleteSessionf">Delete session</string>
    <string name="unassign">Un-Assign</string>
    <string name="click_screen_to_continue">Click on screen to go to your role page</string>
    <string name="Sun">Sun</string>
    <string name="instructor">instructor</string>
    <string name="editCourse">Edit Course</string>
    <string name="description">Description:</string>
    <string name="capacity">Capacity:</string>
    <string name="endDate">End Date:</string>
    <string name="viewAll">View All</string>
    <string name="viewSession">View Session</string>
    <string name="descript">Descript</string>
    <string name="delSession">Delete Session</string>
    <string name="goToSearch">Go to Search</string>
    <string name="unenroll">UNENROLL</string>
    <string name="enroll">ENROLL</string>
    <string name="searchByDay">SEARCH BY DAY</string>
    <string name="CourseDay">Day</string>

</resources>