<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/DelAcc"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:text="@string/deleteAccount"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Click here to log out"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="647dp" />

    <EditText
        android:id="@+id/AccName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/AccountName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/Course_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CourseName"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="289dp" />

    <EditText
        android:id="@+id/Course_Code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CourseCode"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="334dp" />

    <Button
        android:id="@+id/DelCourse"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/deleteCourse"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="499dp" />

    <Button
        android:id="@+id/CreateCourse"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/create"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="499dp" />

    <Button
        android:id="@+id/EditByName"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/EditByName"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="567dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CourseManage"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="219dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AccountManage"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/NewCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NewCourseName"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="394dp" />

    <EditText
        android:id="@+id/NewCourseCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NewCourseCode"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        android:id="@+id/EditByCode"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/EditByCode"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="567dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Use The Course Code To Delete Courses."
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="258dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>