<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SignStudent"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/Sign"
        android:text="@string/SignUpStudent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="535dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/SignInstructor"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/Sign"
        android:text="@string/SignUpInstructor"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="535dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Log"
        android:text="log in"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="600dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/password"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="170dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="115dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>