<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/DoSign"
        android:layout_width="333dp"
        android:layout_height="140dp"
        android:hint="@string/DoSign"
        android:text="Sign"
        android:textSize="50px"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="821dp" />

    <Button
        android:id="@+id/Return"
        android:layout_width="382dp"
        android:layout_height="140dp"
        android:hint="@string/Return"
        android:text="Return to main"
        android:textSize="50px"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="990dp" />

    <EditText
        android:id="@+id/InputName"
        android:layout_width="955dp"
        android:layout_height="112dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/InputName"
        android:textSize="50px"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="239dp" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="961dp"
        android:layout_height="141dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/InputPassword"
        android:textSize="50px"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="353dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="688dp"
        android:layout_height="103dp"
        android:text="Create your account"
        android:textSize="100px"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="90dp" />
</androidx.constraintlayout.widget.ConstraintLayout>