<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="375dp"
        android:layout_height="59dp"
        android:text="Welcome ‘firstname/username’! You are logged in as admin."
        android:textSize="50px"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="106dp" />

    <Button
        android:id="@+id/btn_deleteCourse"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/deleteCourse"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="452dp" />

    <Button
        android:id="@+id/btn_deleteAccount"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:text="@string/deleteAccount"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="382dp" />

    <Button
        android:id="@+id/btn_createCourse"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:text="@string/create"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="517dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="294dp"
        android:layout_height="28dp"
        android:text="You can manage accounts"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="333dp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Click here to log out"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="647dp" />
</androidx.constraintlayout.widget.ConstraintLayout>