<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionActivity">

    <Button
        android:id="@+id/GotoSearchBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/delSessionBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="0dp"
        android:text="@string/goToSearch" />

    <ListView
        android:id="@+id/sessionListView"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <TextView
        android:id="@+id/sessionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sessionListView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="Session Information:"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addSessionBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="9dp"
        android:text="@string/addSession" />

    <Button
        android:id="@+id/delSessionBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/GotoSearchBtn"
        android:layout_alignBottom="@+id/addSessionBtn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/addSessionBtn"
        android:text="@string/delSession" />

    <TextView
        android:id="@+id/sessionInfoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sessionTxt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-39dp"
        android:text="Null Session"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sessionListView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:text="Refresh" />
</RelativeLayout>